--- a/about.htm
+++ b/about.htm
@@ -220,6 +220,12 @@
           <section class="sec__message">
             <div class="message">
               <div class="message__inner innerWrap">
+                <div class="bubble01">
+                  <span class="img-box">
+                    <img class="ofi" src="img/common/i_bubble.png" alt="装飾">
+                  </span>
+                </div>
+
                 <div class="message__head">
                   <div class="sec-ttl01 -center -firstLetterBlue">
                     <span class="en split anime -for-boundIn-b-40">MESSAGE</span>
@@ -227,22 +233,29 @@
                   </div>
                 </div>
                 <div class="message__body">
-                  <p class="lead">
-                    子どもたちもご家族もスタッフも。<br>
-                    アリスタッチに関わるすべての人に<br>
-                    笑顔でハッピーな毎日を届けたい。
-                  </p>
-                  <p class="desc">
-                    2002年、合資会社として設立した私たちアリスタッチグループ。翌2003年から障がい者支援事業「アリスタッチ」、2010年から児童デイサービス事業「アップル」を開始しました。経営理念として「アリスタッチは人々の日常に夢と希望と信頼のネットワークを築き快適で笑顔のある生活環境を創造することに努め社会に貢献します」を掲げ、障がい者（児）一人ひとりの発達や成長のスピードに合わせた個別の支援計画を作成し、作成後は継続的な見直し及び改善を行い、常に新しい情報に基づいて最適な学び・指導・訓練を提供します。<br>
-                    <br>
-                    アリスタッチグループは、「みんながハッピーになり、ご機嫌な毎日を過ごしてもらいたい」と考えています。利用者ご本人が楽しく過ごす時間と場所を提供し、ご家族の方の負担を軽減する私たちの事業を支えているのは、高い意欲と志、愛情を持つ一人ひとりのスタッフです。社長の「明るく楽しくやりましょう！」という人柄が浸透している職場の雰囲気は、スタッフのポジティブな気持ちを後押ししています。私たちの想いに共感され、入社前の職場見学にて肌で感じた職場の雰囲気を気に入られたら、ぜひご応募ください。お会いできるのを楽しみにしています。
+                  <div class="txt-box">
+                    <p class="lead anime -slideIn-b-40">
+                      子どもたちもご家族もスタッフも。<br>
+                      アリスタッチに関わるすべての人に<br>
+                      笑顔でハッピーな毎日を届けたい。
+                    </p>
+                    <p class="desc anime -slideIn-b-40">
+                      2002年、合資会社として設立した私たちアリスタッチグループ。翌2003年から障がい者支援事業「アリスタッチ」、2010年から児童デイサービス事業「アップル」を開始しました。経営理念として「アリスタッチは人々の日常に夢と希望と信頼のネットワークを築き快適で笑顔のある生活環境を創造することに努め社会に貢献します」を掲げ、障がい者（児）一人ひとりの発達や成長のスピードに合わせた個別の支援計画を作成し、作成後は継続的な見直し及び改善を行い、常に新しい情報に基づいて最適な学び・指導・訓練を提供します。<br>
+                      <br>
+                      アリスタッチグループは、「みんながハッピーになり、ご機嫌な毎日を過ごしてもらいたい」と考えています。利用者ご本人が楽しく過ごす時間と場所を提供し、ご家族の方の負担を軽減する私たちの事業を支えているのは、高い意欲と志、愛情を持つ一人ひとりのスタッフです。社長の「明るく楽しくやりましょう！」という人柄が浸透している職場の雰囲気は、スタッフのポジティブな気持ちを後押ししています。私たちの想いに共感され、入社前の職場見学にて肌で感じた職場の雰囲気を気に入られたら、ぜひご応募ください。お会いできるのを楽しみにしています。
 
-                  </p>
-                  <div class="name-holder">
-                    <span class="position">代表</span>
-                    <span class="name">豆越 祐子</span>
+                    </p>
+                    <div class="name-holder anime -slideIn-b-40">
+                      <span class="position">代表</span>
+                      <span class="name">豆越 祐子</span>
+                    </div>
+                    <div class="bubble02">
+                      <span class="img-box">
+                        <img class="ofi" src="img/common/i_bubble.png" alt="装飾">
+                      </span>
+                    </div>
                   </div>
-                  <div class="border-box">
+                  <div class="border-box anime -slideIn-b-40">
                     <p class="ttl">アリスタッチ・アップルの由来</p>
                     <p class="desc">
                       社長の知人にフロリダに住む心やさしい女性がいました。彼女は名前をアリスファインといい、ある日一人の男の子を養子として迎え入れたのです。アリスファインとその男の子が家族となり2年の月日が流れたある日、男の子は発達がゆるやかであることが分かりました。しかし、その後もアリスファインは男の子に今までと変わらない家族としての愛情を注ぎ続けます。私たちはアリスファインの生き方に共感し、会社名に「アリス（ALICE）」を入れることに決め、「感動させる」「連絡を取り合う」の意味も持つ「タッチ（TOUCH）」をプラスした「アリスタッチ（ALICETOUCH）」を正式社名としました。<br>
@@ -264,7 +277,7 @@
                     <h2 class="ja split anime -for-boundIn-b-40">経営理念</h2>
                   </div>
                 </div>
-                <div class="philosophy__body">
+                <div class="philosophy__body anime -slideIn-b-40">
                   <dl class="list">
                     <dt class="term">経営理念</dt>
                     <dd class="desc">
@@ -311,59 +324,72 @@
                     <h2 class="ja split anime -for-boundIn-b-40">会社概要</h2>
                   </div>
                 </div>
-                <div class="company__body">
-                  <dl class="list">
-                    <dt class="term">法人名</dt>
-                    <dd class="desc">合同会社アリスタッチ</dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">事業所名</dt>
-                    <dd class="desc">
-                      障害者支援ステーションアリスタッチ<br>
-                      ケアステーションアリスタッチ<br>
-                      児童デイサービスアップル<br>
-                      児童デイサービスアップル上汐<br>
-                      相談支援センターアリスファイン<br>
-                      生活介護アップル上汐
-                    </dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">主な事業内容</dt>
-                    <dd class="desc">
-                      障害者（児）の居宅介護・重度訪問介護・行動援護・同行援護・移動支援<br>
-                      介護保険の訪問介護・介護予防訪問介護、放課後等デイサービス・児童発達支援、生活介護<br>
-                      計画相談・障害児相談の福祉サービス
-                    </dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">事務所所在地</dt>
-                    <dd class="desc">〒542-0061　大阪市中央区安堂寺町1-3-12　大阪谷町ビル201号</dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">TEL</dt>
-                    <dd class="desc">06-6764-7267</dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">FAX</dt>
-                    <dd class="desc">06-6764-7267
-                      06-6764-7287</dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">決算</dt>
-                    <dd class="desc">3月末日</dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">設立</dt>
-                    <dd class="desc">2002年12月2日</dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">代表者</dt>
-                    <dd class="desc">豆越　祐子</dd>
-                  </dl>
-                  <dl class="list">
-                    <dt class="term">従業員数</dt>
-                    <dd class="desc">約100名（2022年7月現在）</dd>
-                  </dl>
+                <div class="company__body anime -slideIn-b-40">
+                  <div class="list-holder">
+                    <dl class="list">
+                      <dt class="term">法人名</dt>
+                      <dd class="desc">合同会社アリスタッチ</dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">事業所名</dt>
+                      <dd class="desc">
+                        障害者支援ステーションアリスタッチ<br>
+                        ケアステーションアリスタッチ<br>
+                        児童デイサービスアップル<br>
+                        児童デイサービスアップル上汐<br>
+                        相談支援センターアリスファイン<br>
+                        生活介護アップル上汐
+                      </dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">主な事業内容</dt>
+                      <dd class="desc">
+                        障害者（児）の居宅介護・重度訪問介護・行動援護・同行援護・移動支援<br>
+                        介護保険の訪問介護・介護予防訪問介護、放課後等デイサービス・児童発達支援、生活介護<br>
+                        計画相談・障害児相談の福祉サービス
+                      </dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">事務所所在地</dt>
+                      <dd class="desc">〒542-0061　大阪市中央区安堂寺町1-3-12　大阪谷町ビル201号</dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">TEL</dt>
+                      <dd class="desc">06-6764-7267</dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">FAX</dt>
+                      <dd class="desc">06-6764-7267
+                        06-6764-7287</dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">決算</dt>
+                      <dd class="desc">3月末日</dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">設立</dt>
+                      <dd class="desc">2002年12月2日</dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">代表者</dt>
+                      <dd class="desc">豆越　祐子</dd>
+                    </dl>
+                    <dl class="list">
+                      <dt class="term">従業員数</dt>
+                      <dd class="desc">約100名（2022年7月現在）</dd>
+                    </dl>
+                  </div>
+
+                  <div class="bubble01">
+                    <span class="img-box">
+                      <img class="ofi" src="img/common/i_bubble.png" alt="装飾">
+                    </span>
+                  </div>
+                  <div class="bubble02">
+                    <span class="img-box">
+                      <img class="ofi" src="img/common/i_bubble.png" alt="装飾">
+                    </span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -379,7 +405,7 @@
                     <h2 class="ja split anime -for-boundIn-b-40">個人情報保護方針</h2>
                   </div>
                 </div>
-                <div class="privacy__body">
+                <div class="privacy__body anime -slideIn-b-40">
                   <p class="lead">
                     アリスタッチウェブサイト(以下、本ウェブサイトといいます)にアクセスいただきありがとうございます。 本ウェブサイトは合同会社アリスタッチ及びその関連スタッフ、またはその代理人が運営しております。 本ウェブサイトをご利用される事をもちまして、皆様は以下に示す条件（本条件）に同意したものとみなされます。 尚、本条件は変更される場合がありますので、最新の内容をご確認いただきますようお願い申し上げます。
                   </p>
