--- a/index.htm
+++ b/index.htm
@@ -86,10 +86,10 @@
               <a class="link" href="daycare.htm">放課後等デイサービス</a>
             </li>
             <li class="nav__list__item">
-              <a class="link" href="data.htm">データで見るアリスタッチ</a>
+              <a class="link" href="data.htm">スタッフデータ</a>
             </li>
             <li class="nav__list__item">
-              <a class="link" href="interview_l.htm">インタビュー</a>
+              <a class="link" href="interview_l.htm">スタッフインタビュー</a>
             </li>
             <li class="nav__list__item">
               <a class="link" href="about.htm">会社案内</a>
@@ -131,10 +131,10 @@
                 <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="pages__list__item">
-                <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                <a class="link" href="data.htm">スタッフデータ</a>
               </li>
               <li class="pages__list__item">
-                <a class="link" href="interview_l.htm">インタビュー</a>
+                <a class="link" href="interview_l.htm">スタッフインタビュー</a>
               </li>
               <li class="pages__list__item">
                 <a class="link" href="about.htm">会社案内</a>
@@ -262,7 +262,7 @@
                       </span>
                     </div>
                     <div class="detail">
-                      <h3 class="ttl">データで見る<br>アリスタッチ</h3>
+                      <h3 class="ttl">スタッフデータ</h3>
                     </div>
                   </div>
                 </a>
@@ -552,10 +552,10 @@
                 <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="pages__list__item">
-                <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                <a class="link" href="data.htm">スタッフデータ</a>
               </li>
               <li class="pages__list__item">
-                <a class="link" href="interview_l.htm">インタビュー</a>
+                <a class="link" href="interview_l.htm">スタッフインタビュー</a>
               </li>
               <li class="pages__list__item">
                 <a class="link" href="about.htm">会社案内</a>
