--- a/interview_ajax.htm
+++ b/interview_ajax.htm
@@ -4,7 +4,7 @@
     <div class="hd">
       <div class="sec-ttl01 -center -sm-left">
         <span class="en split anime -for-boundIn-b-40">Interview</span>
-        <h2 class="ja split anime -for-boundIn-b-40">インタビュー</h2>
+        <h2 class="ja split anime -for-boundIn-b-40">スタッフインタビュー</h2>
       </div>
       <div class="contents anime">
         <ul class="contents__list">
