--- a/interview_d.htm
+++ b/interview_d.htm
@@ -25,7 +25,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="format-detection" content="telephone=no" />
 
-    <title>インタビュー詳細｜合同会社 アリスタッチ</title>
+    <title>スタッフインタビュー詳細｜合同会社 アリスタッチ</title>
 
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -91,10 +91,10 @@
                 <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                <a class="link" href="data.htm">スタッフデータ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="interview_l.htm">インタビュー</a>
+                <a class="link" href="interview_l.htm">スタッフインタビュー</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="about.htm">会社案内</a>
@@ -137,10 +137,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
@@ -277,7 +277,7 @@
                 <div class="head">
                   <div class="sec-ttl01 -center -firstLetterBlue">
                     <span class="en split anime -for-boundIn-b-40">INTERVIEW</span>
-                    <h2 class="ja split anime -for-boundIn-b-40">インタビュー</h2>
+                    <h2 class="ja split anime -for-boundIn-b-40">スタッフインタビュー</h2>
                   </div>
                 </div>
                 <div class="body anime">
@@ -479,9 +479,9 @@
 							<a href="index.htm"><span>合同会社 アリスタッチ HOME</span></a>
 						</li>
 						<li class="breadcrumb_list_item">
-							<a href="interview_l.htm"><span>インタビュー一覧</span></a>
+							<a href="interview_l.htm"><span>スタッフインタビュー一覧</span></a>
 						</li>
-						<li class="breadcrumb_list_item">N.Cさんのインタビュー</li>
+						<li class="breadcrumb_list_item">N.Cさんのスタッフインタビュー</li>
 					</ol>
 				</div>
 			</div>
@@ -612,10 +612,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
