--- a/about.htm
+++ b/about.htm
@@ -90,10 +90,10 @@
                 <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                <a class="link" href="data.htm">スタッフデータ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="interview_l.htm">インタビュー</a>
+                <a class="link" href="interview_l.htm">スタッフインタビュー</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="about.htm">会社案内</a>
@@ -136,10 +136,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
@@ -638,10 +638,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
