--- a/data.htm
+++ b/data.htm
@@ -25,7 +25,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="format-detection" content="telephone=no" />
 
-    <title>データで見るアリスタッチ｜合同会社 アリスタッチ</title>
+    <title>スタッフデータ｜合同会社 アリスタッチ</title>
 
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -90,10 +90,10 @@
                 <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                <a class="link" href="data.htm">スタッフデータ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="interview_l.htm">インタビュー</a>
+                <a class="link" href="interview_l.htm">スタッフインタビュー</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="about.htm">会社案内</a>
@@ -136,10 +136,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
@@ -207,7 +207,7 @@
 					<div class="l-main__mv__wrap">
 						<div class="lmv-box">
 							<span class="lmv-box__en">DATA</span>
-							<h1 class="lmv-box__ja">データで見るアリスタッチ</h1>
+							<h1 class="lmv-box__ja">スタッフデータ</h1>
 						</div>
 					</div>
 				</div>
@@ -289,13 +289,13 @@
                           </div>
                           <div class="num-holder">
                             <div class="num-box">
-                              <span class="js-set_count num" data-num="100">0</span>
+                              <span class="js-set_count num" data-num="100">0</span>%
                             </div>
                             <div class="num-box">
-                              <span class="js-set_count num" data-num="5">0</span>
+                              <span class="js-set_count num" data-num="5">0</span>%
                             </div>
                             <div class="num-box">
-                              <span class="js-set_count num" data-num="10">0</span>
+                              <span class="js-set_count num" data-num="10">0</span>%
                             </div>
                           </div>
                         </div>
@@ -744,7 +744,7 @@
 						<li class="breadcrumb_list_item">
 							<a href="index.htm"><span>合同会社 アリスタッチ HOME</span></a>
 						</li>
-						<li class="breadcrumb_list_item">データで見るアリスタッチ</li>
+						<li class="breadcrumb_list_item">スタッフデータ</li>
 					</ol>
 				</div>
 			</div>
@@ -874,10 +874,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
