--- a/information_d.htm
+++ b/information_d.htm
@@ -91,10 +91,10 @@
                 <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                <a class="link" href="data.htm">スタッフデータ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="interview_l.htm">インタビュー</a>
+                <a class="link" href="interview_l.htm">スタッフインタビュー</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="about.htm">会社案内</a>
@@ -137,10 +137,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
@@ -416,10 +416,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
