--- a/interview_l.htm
+++ b/interview_l.htm
@@ -25,7 +25,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="format-detection" content="telephone=no" />
 
-    <title>インタビュー一覧｜合同会社 アリスタッチ</title>
+    <title>スタッフインタビュー一覧｜合同会社 アリスタッチ</title>
 
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -90,10 +90,10 @@
                 <a class="link" href="daycare.htm">放課後等デイサービス</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                <a class="link" href="data.htm">スタッフデータ</a>
               </li>
               <li class="nav__list__item">
-                <a class="link" href="interview_l.htm">インタビュー</a>
+                <a class="link" href="interview_l.htm">スタッフインタビュー</a>
               </li>
               <li class="nav__list__item">
                 <a class="link" href="about.htm">会社案内</a>
@@ -136,10 +136,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
@@ -208,7 +208,7 @@
 					<div class="l-main__mv__wrap">
 						<div class="lmv-box">
 							<span class="lmv-box__en">INTERVIEW</span>
-							<h1 class="lmv-box__ja">インタビュー</h1>
+							<h1 class="lmv-box__ja">スタッフインタビュー</h1>
 						</div>
 					</div>
 				</div>
@@ -327,7 +327,7 @@
 						<li class="breadcrumb_list_item">
 							<a href="index.htm"><span>合同会社 アリスタッチ HOME</span></a>
 						</li>
-						<li class="breadcrumb_list_item">インタビュー一覧</li>
+						<li class="breadcrumb_list_item">スタッフインタビュー一覧</li>
 					</ol>
 				</div>
 			</div>
@@ -457,10 +457,10 @@
                   <a class="link" href="daycare.htm">放課後等デイサービス</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="data.htm">データで見るアリスタッチ</a>
+                  <a class="link" href="data.htm">スタッフデータ</a>
                 </li>
                 <li class="pages__list__item">
-                  <a class="link" href="interview_l.htm">インタビュー</a>
+                  <a class="link" href="interview_l.htm">スタッフインタビュー</a>
                 </li>
                 <li class="pages__list__item">
                   <a class="link" href="about.htm">会社案内</a>
